--- a/darg.html
+++ b/darg.html
@@ -33,35 +33,44 @@
 		position: absolute;
 	}
 	.right{
+		position: relative;
 		float: left;
 		width: 600px;
 		border: 1px red solid;
 		height: 500px;
+
+	}
+	span{
+		float: right;
+		cursor:pointer;
 	}
 	</style>
 </head>
 <body>
 	<div class='left clearfix'>
 		<div class='warp'>
-			<img src="thumb_image3.jpg" class='drag'>
+			<img src="thumb_image3.jpg" class='drag' >
 		</div>
 		<div class='warp'>
-			<img src="01fea55541ed73000001714a430253.jpg" class='drag'>
+			<img src="01fea55541ed73000001714a430253.jpg" class='drag' >
 		</div>
 		<div class='warp'>
-			<img src="thumb_image3.jpg" class='drag'>
+			<img src="thumb_image3.jpg" class='drag' >
 		</div>
 		<div class='warp'>
-			<img src="01fea55541ed73000001714a430253.jpg" class='drag'>
+			<img src="01fea55541ed73000001714a430253.jpg" class='drag' >
 		</div>
 		<div class='warp'>
-			<img src="thumb_image3.jpg" class='drag'>
+			<img src="thumb_image3.jpg" class='drag' >
 		</div>
 		<div class='warp'>
-			<img src="01fea55541ed73000001714a430253.jpg" class='drag'>
+			<img src="01fea55541ed73000001714a430253.jpg" class='drag' >
 		</div>
 	</div>
 	<div class='right'></div>
+	<div class='tj'>
+		<span>提交</span>
+	</div>
 	<script type="text/javascript" src='jquery.js'></script>
 	<script type="text/javascript" src='jquery-ui.min.js'></script>
 	<script type="text/javascript">
@@ -72,8 +81,8 @@
 				//当图片进入右边的区域，创建一个新的图片元素，并对这个新创建的图片元素进行操作。
 				if($(this).offset().left + $(this).width() > $(".right").offset().left){
 					var src = $(this).attr('src');
-					var parent = $(this).parent();
-					var conle = $("<img src='"+src+"'>");
+					var selfData = $(this).attr('selfData');
+					var conle = $("<img src='"+src+"' >");
 					conle.draggable({ cursor: "move",
 						//如果新创建的元素位于右边区域外，将新元素移除
 						stop:function(){
@@ -83,18 +92,19 @@
 									cur.remove()
 								});
 								//将新创建的元素节点从数组中移除
-								imgArr.splice($.inArray(cur,imgArr),1);
+								//imgArr.splice($.inArray(cur,imgArr),1);
 							}
 						}
 				});
-					parent.append(conle);
+					//将副本插入到操作台
+					$(".right").append(conle);
 					conle.css({
 						"position":'absolute',
-						"top": ui.position.top + 'px',
-						"left": ui.position.left + 'px'
+						"top": (ui.offset.top - $(".right").offset().top) + 'px',
+						"left": (ui.offset.left - $(".right").offset().left) + 'px'
 					});
 					//将复制的元素保存到imgArr数组中
-					imgArr.push(conle);
+					//imgArr.push(conle);
 				}
 				//原本的图片回到初始位置
 				$(this).css({
@@ -102,7 +112,23 @@
 					'left':'0'
 					});
 			});
+		//当操作台里的元素被点击的时候，进行的操作
+		$(".right").on("click","img",function(){
+			$(".right").find("img").css({"border-style":"none"});
+			$(this).css({"border-style":"inset","border-color":"#C9C6C6","border-weight":"1px"});
 		});
+		//提交
+		$("span").click(function(){
+			imgArr = [];//清空数组
+			$(".right").children("img").each(function(index,element){
+				var itemImg = Array();
+				itemImg['offsetLeft'] = element.offsetLeft;
+				itemImg['offsetTop'] = element.offsetTop;
+				itemImg['src'] = element.src;
+				imgArr.push(itemImg);
+			});
+		});
+	});
 	</script>
 </body>
 </html>
